add localization - german & eng

--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -49,7 +49,7 @@
     "contactSubtitle": "",
     "feedbackABauer": "Es hat mir sehr viel Spaß gemacht, mit Viktor zu arbeiten, da er immer ein Auge für ein ansprechendes Design hatte und stets eine intuitive grafische Benutzeroberfläche anstrebte. Seine Begeisterung für das Programmieren hat uns immer zu hervorragenden Lösungen geführt.",
     "contactMeQestionOrJob": "Haben Sie eine Frage oder ein Jobangebot für mich?",
-    "contactMeRequest =": "Senden Sie mir einfach eine Anfrage",
+    "contactMeRequest": "Senden Sie mir einfach eine Anfrage",
     "contactFormName": "Ihr Name",
     "contactFormNameHint": "Geben Sie Ihren Namen ein",
     "contactFormEmail": "E-Mail Adresse",
