--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -24,11 +24,11 @@
     "experienceYearDescription": "Offering 5 years of experience in software development especially in mobile App development.",
     "experienceYearDescription_1": " Specialize in thinking outside the box to find unique solutions",
     "experienceYearDescription_2": " to difficult engineering problems and solving problem fasts and clean.",
-    "experienceYearDescription_3 ": "I bring experience from designing the ",
+    "experienceYearDescription_3": "I bring experience from designing the ",
     "experienceYearDescription_4": "UI of apps according to concepts",
     "experienceYearDescription_5": " to ",
     "experienceYearDescription_6": "bug and performance analysis",
-    "experienceYearDescription_7 ": " as well as complete app optiomization",
+    "experienceYearDescription_7": " as well as complete app optiomization",
     "serviceTitle": "Service Offerings",
     "serviceSubtitle": "",
     "service_01": "Android, IOS & Web App development",
@@ -49,7 +49,7 @@
     "contactSubtitle": "",
     "feedbackABauer": "I really enjoyed working with Viktor as he always had an eye for an appealing design and always aimed for an intuitive graphical user interface. His enthusiasm for programming has always led us to excellent solutions.",
     "contactMeQestionOrJob": "Do you have any questions or a job offer for me?",
-    "contactMeRequest =": "Just send me a request ",
+    "contactMeRequest": "Just send me a request ",
     "contactFormName": "Your Name",
     "contactFormNameHint": "Enter your name",
     "contactFormEmail": "Email Adress",
