--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -2,23 +2,26 @@
     "menuHome": "Startseite",
     "menuAboutMe": "Über mich",
     "menuServices": "Dienstleistungen",
-    "menüMeineProjekte": "Meine Projekte",
     "menuFeedback": "Feedback",
-    "menüKontakt": "Kontakt",
+    "menuContact": "Kontakt",
+    "menuMyProjects": "Meine Projekte",
+    "menuImpressum": "Impressum",
+    "impressumTitle": "Impressum",
+    "impressumSubtitle": "Angaben gemäß § 5 TMG",
     "upperSubTitle": "Hallo, freut mich, Sie kennenzulernen",
     "nameTitle": "Viktor Hermann",
     "bottomSubTitle": "Flutter Mobile App Entwickler aus Leidenschaft",
     "poweredByFlutter": "Mit 💙 und Flutter web entwickelt",
     "motto": "Du verlierst nie. Entweder du gewinnst oder du lernst. ",
     "aboutMeTitle": "Über mich",
-    "aboutMeShort": "",
+    "aboutMeShort": "Das bin ich",
     "experienceYearTitle": "Jahre der Erfahrung",
     "experienceYear": "05",
-    "hireMeAction": "Stellen Sie mich ein!",
+    "hireMeAction": "Zusammenarbeit vereinbaren!",
     "downloadCvAction": "Lebenslauf herunterladen",
     "aboutMeDescription": "Nach Abschluss des Studiums als ",
     "aboutMeDescription_1": "Fachinformatiker Anwendungsentwicklung im Jahr 2018",
-    "aboutMeDescription_2": "bin ich immer auf der Suche nach neuen Herausforderungen. Ich bin schnell",
+    "aboutMeDescription_2": "bin ich immer auf der Suche nach neuen Herausforderungen. Ich bin schnell ",
     "aboutMeDescription_3": "spezialisiert auf mobile App-Entwicklung",
     "aboutMeDescription_4": " und habe nun mehrere Jahre Erfahrung in der Softwareentwicklung insbesondere mit dem Flutter-Framework.",
     "experienceYearDescription": "Biete 5 Jahre Erfahrung in der Softwareentwicklung, insbesondere in der mobilen App-Entwicklung.",
@@ -29,11 +32,11 @@
     "experienceYearDescription_5": " bis ",
     "experienceYearDescription_6": "Fehler- und Leistungsanalyse",
     "experienceYearDescription_7": " sowie komplette App-Optiomierung",
-    "serviceTitle": "Service-Angebote",
-    "serviceSubtitle": "",
+    "serviceTitle": "Dienstleistungen",
+    "serviceSubtitle": "Das biete ich Ihnen",
     "service_01": "Android, IOS & Web App Entwicklung",
     "service_02": "App \u27F7 Backend Kommunikation",
-    "service_03": "Neues Feature und weitere Entwicklung",
+    "service_03": "Neue Feature und weitere Entwicklung",
     "service_04": "Analyse und Behebung von Fehlern und Problemen",
     "service_05": "Performance-, Netzwerk-, UI- und UX-Optimierung",
     "service_06": "Push-Benachrichtigungen mit Firebase",
@@ -41,15 +44,17 @@
     "service_08": "Qualitätssicherung - Testen",
     "startingNewProjectTitle": "Neues Projekt starten?",
     "startingNewProjectSubtitle": "Einen Kostenvoranschlag für das neue Projekt erhalten",
-    "meinProjektTitel": "Referenzprojekte",
-    "myProjectSubtitle": "",
+    "myProjektTitel": "Referenzprojekte",
+    "myProjectSubtitle": "Das habe ich bereits gemacht",
     "feedbackTitle": "Erhaltenes Feedback",
-    "feedbackSubtitle": "Erfahrungsberichte von Kunden, die mich sehr inspiriert haben",
-    "contactTitle": "Kontaktieren Sie mich",
-    "contactSubtitle": "",
+    "feedbackSubtitle": "Das wurde über mich gesagt",
+    "contactTitle": "Kontakt",
+    "contactSubtitle": "So können Sie mich erreichen",
     "feedbackABauer": "Es hat mir sehr viel Spaß gemacht, mit Viktor zu arbeiten, da er immer ein Auge für ein ansprechendes Design hatte und stets eine intuitive grafische Benutzeroberfläche anstrebte. Seine Begeisterung für das Programmieren hat uns immer zu hervorragenden Lösungen geführt.",
+    "feedbackCXavier": "Zuverlässigkeit und Tatkraft in Kombination mit seinem Talent in der App Entwicklung machen Viktor zu einem wertvollen Teammitglied.",
     "contactMeQestionOrJob": "Haben Sie eine Frage oder ein Jobangebot für mich?",
-    "contactMeRequest": "Senden Sie mir einfach eine Anfrage",
+    "contactMeInstantRequest": "Kontaktieren Sie mich direkt",
+    "contactMeSocialMediaRequest": "Kontaktieren Sie mich über die  Social Media Plattformen",
     "contactFormName": "Ihr Name",
     "contactFormNameHint": "Geben Sie Ihren Namen ein",
     "contactFormEmail": "E-Mail Adresse",
@@ -59,5 +64,22 @@
     "contactFormBudget": "Projektbudget",
     "contactFormBudgetHint": "Nennen Sie mir Ihr Budget oder Ihren Stundensatz oder Tagessatz",
     "contactFormDescription": "Beschreibung",
-    "contactFormDescriptionHint": "Erzählen Sie mir von Ihrem Projekt"
+    "contactFormDescriptionHint": "Erzählen Sie mir von Ihrem Projekt",
+    "contactSend": "Anfrage absenden",
+    "emailContentTitle": "Interesse an einer Zusammenarbeit mit VApps-IT",
+    "emailContentSubTitle": "Hallo Viktor, \n\nwir haben Interesse an einer Zusammenarbeit mit dir. \n\n Ich bitte um schnellstmögliche Kontaktaufnahme. \n\n**HIER BITTE KONTAKTDATEN HINTERLEGEN** \n\n Vielen Dank im Voraus",
+    "qrTitle": "Scan den QR-Code um mich zu kontaktieren",
+    "qrButtonClose": "Schließen",
+    "impressumAdress": "Anschrift",
+    "impressumContact": "Kontakt",
+    "impressumUstIdNrTitle": "USt-IdNr gemäß §27a Umsatzsteuergesetz:",
+    "impressumEmail": "E-Mail:",
+    "impressumPhone": "Telefon:",
+    "impressumDisclaimer": "Haftungsausschluss",
+    "impressumLinks": "Haftung für Links",
+    "impressumLinksText": "Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.",
+    "impressumPrivacy": "Datenschutz",
+    "impressumPrivacyText": "Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder eMail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Die Nutzung der im Rahmen des Impressums oder vergleichbarer Angaben veröffentlichten Kontaktdaten wie Postanschriften, Telefon- und Faxnummern sowie Emailadressen durch Dritte zur Übersendung von nicht ausdrücklich angeforderten Informationen ist nicht gestattet. Die Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa durch Spam-Mails, vor.",
+    "impressumGLytics": "Google Analytics",
+    "impressumGLyticsText": "Diese Website benutzt Google Analytics, einen Webanalysedienst der Google Inc (Google). Google Analytics verwendet sog. Cookies, Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglichen. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieser Website (einschließlich Ihrer IP-Adresse) wird an einen Server von Google in den USA übertragen und dort gespeichert. Google wird diese Informationen benutzen, um Ihre Nutzung der Website auszuwerten, um Reports über die Websiteaktivitäten für die Websitebetreiber zusammenzustellen und um weitere mit der Websitenutzung und der Internetnutzung verbundene Dienstleistungen zu erbringen. Auch wird Google diese Informationen gegebenenfalls an Dritte übertragen, sofern dies gesetzlich vorgeschrieben oder soweit Dritte diese Daten im Auftrag von Google verarbeiten. Google wird Ihre IP-Adresse nicht mit anderen von Google gespeicherten Daten in Verbindung bringen. Sie können die Installation der Cookies durch eine entsprechende Einstellung in Ihrem Browser verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website voll umfänglich nutzen können. Durch die Nutzung dieser Website erklären Sie sich mit der Bearbeitung der über Sie erhobenen Daten durch Google in der zuvor beschriebenen Art und Weise und zu dem zuvor benannten Zweck einverstanden."
 }
