--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,16 +5,19 @@
     "menuMyProjects": "My Projects",
     "menuFeedback": "Feedback",
     "menuContact": "Contact",
+    "menuImpressum": "Imprint",
+    "impressumTitle": "Legal Disclosure",
+    "impressumSubtitle": "Information according to § 5 TMG",
     "upperSubTitle": "Hi, nice to meet you I\"m",
     "nameTitle": "Viktor Hermann",
     "bottomSubTitle": "Passioned Flutter Mobile App Developer",
     "poweredByFlutter": "Made with 💙 and Flutter web",
     "motto": "You never lose. You either win or you learn.",
     "aboutMeTitle": "About me",
-    "aboutMeShort": "",
+    "aboutMeShort": "This is me",
     "experienceYearTitle": "Years of Experience",
     "experienceYear": "05",
-    "hireMeAction": "Hire Me!",
+    "hireMeAction": "Arrange cooperation!",
     "downloadCvAction": "Download CV",
     "aboutMeDescription": "After graduating as an ",
     "aboutMeDescription_1": "IT Specialist Application Developer in 2018",
@@ -30,7 +33,7 @@
     "experienceYearDescription_6": "bug and performance analysis",
     "experienceYearDescription_7": " as well as complete app optiomization",
     "serviceTitle": "Service Offerings",
-    "serviceSubtitle": "",
+    "serviceSubtitle": "What I offer you",
     "service_01": "Android, IOS & Web App development",
     "service_02": "App \u27F7 Backend communication",
     "service_03": "New Feature and further development",
@@ -42,14 +45,16 @@
     "startingNewProjectTitle": "Starting New Project?",
     "startingNewProjectSubtitle": "Get an estimate for the new project",
     "myProjectTitle": "Reference projects",
-    "myProjectSubtitle": "",
+    "myProjectSubtitle": "I have already done this",
     "feedbackTitle": "Feedback Received",
     "feedbackSubtitle": "Client’s testimonials that inspired me a lot",
-    "contactTitle": "Contact Me",
-    "contactSubtitle": "",
+    "contactTitle": "Contact ",
+    "contactSubtitle": "The way to contact me",
     "feedbackABauer": "I really enjoyed working with Viktor as he always had an eye for an appealing design and always aimed for an intuitive graphical user interface. His enthusiasm for programming has always led us to excellent solutions.",
+    "feedbackCXavier": "Reliability and drive combined with his talent in app development make Viktor a valuable team member.",
     "contactMeQestionOrJob": "Do you have any questions or a job offer for me?",
-    "contactMeRequest": "Just send me a request ",
+    "contactMeInstantRequest": "Contact me directly",
+    "contactMeSocialMediaRequest": "Contact me via social media platforms",
     "contactFormName": "Your Name",
     "contactFormNameHint": "Enter your name",
     "contactFormEmail": "Email Adress",
@@ -59,5 +64,22 @@
     "contactFormBudget": "Project Budget",
     "contactFormBudgetHint": "Tell me your budget or your hourly rate or daily rate",
     "contactFormDescription": "Description",
-    "contactFormDescriptionHint": "Tell me about your project"
+    "contactFormDescriptionHint": "Tell me about your project",
+    "contactSend": "Send request",
+    "emailContentTitle": "Interest in cooperation with VApps-IT",
+    "emailContentSubTitle": "Hi Viktor, \n\nwe are interested in working with you. \n\n Please contact me as soon as possible.\n\n**PLEASE PUT CONTACT DATA** \n\n Thank you in advance",
+    "qrTitle": "Scan the QR-Code to get my number",
+    "qrButtonClose": "Close",
+    "impressumAdress": "Address",
+    "impressumContact": "Contact",
+    "impressumUstIdNrTitle": "USt-IdNr according to §27a sales tax law:",
+    "impressumEmail": "Email:",
+    "impressumPhone": "Phone:",
+    "impressumDisclaimer": "Disclaimer",
+    "impressumLinks": "Liability for links",
+    "impressumLinksText": "Our offer contains links to external websites of third parties, on whose contents we have no influence. Therefore, we cannot assume any liability for these external contents. The respective provider or operator of the pages is always responsible for the content of the linked pages. The linked pages were checked for possible legal violations at the time of linking. Illegal contents were not recognizable at the time of linking. However, a permanent control of the contents of the linked pages is not reasonable without concrete evidence of a violation of the law. If we become aware of any infringements, we will remove such links immediately.",
+    "impressumPrivacy": "Privacy:",
+    "impressumPrivacyText": "The use of our website is generally possible without providing personal data. As far as on our sides personal data (such as name, address or e-mail addresses) are collected, this is as far as possible on a voluntary basis. We point out that data transmission over the Internet (eg communication by e-mail) security gaps. The use of published postal addresses, telephone or fax numbers and email addresses for marketing purposes is prohibited, offenders sending unwanted spam messages will be punished. The operators of the pages expressly reserve the right to take legal action in the event of the unsolicited sending of advertising information, such as spam e-mails.",
+    "impressumGLytics": "Google Analytics",
+    "impressumGLyticsText": "This website uses Google Analytics, a web analytics service provided by Google Inc (Google). Google Analytics uses so-called cookies, text files that are stored on your computer and which enable an analysis of your use of the website. The information generated by the cookie about your use of the website (including your IP address) will be transmitted to and stored by Google on servers in the United States. Google will use this information for the purpose of evaluating your use of the website, compiling reports on website activity for website operators and providing other services relating to website activity and internet usage. Google may also transfer this information to third parties where required to do so by law, or where such third parties process the information on Googles behalf. Google will not associate your IP address with any other data held by Google. You may refuse the use of cookies by selecting the appropriate settings on your browser, however please note that if you do this you may not be able to use the full functionality of this website. By using this website, you consent to the processing of data about you by Google in the manner and for the purposes set out above."
 }
