Update translation and improve text

--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -10,9 +10,10 @@
     "impressumSubtitle": "Angaben gemäß § 5 TMG",
     "upperSubTitle": "Hallo, freut mich, Sie kennenzulernen",
     "nameTitle": "Viktor Hermann",
-    "bottomSubTitle": "Flutter Mobile App Entwickler aus Leidenschaft",
+    "bottomSubTitle": "Freelance - Flutter Mobile App Entwickler",
     "poweredByFlutter": "Mit 💙 und Flutter web entwickelt",
     "motto": "Du verlierst nie. Entweder du gewinnst oder du lernst. ",
+    "nelsonMandela": "- Nelson Mandela ",
     "aboutMeTitle": "Über mich",
     "aboutMeShort": "Das bin ich",
     "experienceYearTitle": "Jahre der Erfahrung",
@@ -21,17 +22,17 @@
     "downloadCvAction": "Lebenslauf herunterladen",
     "aboutMeDescription": "Nach Abschluss des Studiums als ",
     "aboutMeDescription_1": "Fachinformatiker Anwendungsentwicklung im Jahr 2018",
-    "aboutMeDescription_2": "bin ich immer auf der Suche nach neuen Herausforderungen. Ich bin schnell ",
+    "aboutMeDescription_2": " bin ich immer auf der Suche nach neuen Herausforderungen. Ich bin schnell ",
     "aboutMeDescription_3": "spezialisiert auf mobile App-Entwicklung",
     "aboutMeDescription_4": " und habe nun mehrere Jahre Erfahrung in der Softwareentwicklung insbesondere mit dem Flutter-Framework.",
-    "experienceYearDescription": "Biete 5 Jahre Erfahrung in der Softwareentwicklung, insbesondere in der mobilen App-Entwicklung.",
-    "experienceYearDescription_1": " darauf spezialisiert über den Tellerrand zu schauen und einzigartige Lösungen zu finden.",
-    "experienceYearDescription_2": " schwierigen technischen Problemen effizient zu lösen.",
-    "experienceYearDescription_3": "Ich bringe Erfahrungen aus der Gestaltung der ",
+    "experienceYearDescription": "Biete 5 Jahre Erfahrung in der Softwareentwicklung, insbesondere in der mobilen App-Entwicklung",
+    "experienceYearDescription_1": " Ich bin darauf spezialisiert über den Tellerrand zu schauen und einzigartige Lösungen zu finden.",
+    "experienceYearDescription_2": " und schwierigen technischen Problemen effizient zu lösen.",
+    "experienceYearDescription_3": " Ich bringe Erfahrungen aus der Gestaltung der ",
     "experienceYearDescription_4": "UI von Apps nach Konzepten",
     "experienceYearDescription_5": " bis ",
     "experienceYearDescription_6": "Fehler- und Leistungsanalyse",
-    "experienceYearDescription_7": " sowie komplette App-Optiomierung",
+    "experienceYearDescription_7": " sowie eine komplette App-Optimierung mit.",
     "serviceTitle": "Dienstleistungen",
     "serviceSubtitle": "Das biete ich Ihnen",
     "service_01": "Android, IOS & Web App Entwicklung",
