--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -10,9 +10,10 @@
     "impressumSubtitle": "Information according to § 5 TMG",
     "upperSubTitle": "Hi, nice to meet you I\"m",
     "nameTitle": "Viktor Hermann",
-    "bottomSubTitle": "Passioned Flutter Mobile App Developer",
+    "bottomSubTitle": "Freelance - Flutter Mobile App Developer",
     "poweredByFlutter": "Made with 💙 and Flutter web",
     "motto": "You never lose. You either win or you learn.",
+    "nelsonMandela": "- Nelson Mandela ",
     "aboutMeTitle": "About me",
     "aboutMeShort": "This is me",
     "experienceYearTitle": "Years of Experience",
