Introduce adaptive - resizable screen

--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -13,6 +13,7 @@
     "bottomSubTitle": "Freelance - Flutter Mobile App Entwickler",
     "poweredByFlutter": "Mit 💙 und Flutter web entwickelt",
     "motto": "Du verlierst nie. Entweder du gewinnst oder du lernst. ",
+    "mottoBreaked": "Du verlierst nie\n  Entweder du gewinnst oder \n  du lernst. ",
     "nelsonMandela": "- Nelson Mandela ",
     "aboutMeTitle": "Über mich",
     "aboutMeShort": "Das bin ich",
@@ -20,6 +21,8 @@
     "experienceYear": "05",
     "hireMeAction": "Zusammenarbeit vereinbaren!",
     "downloadCvAction": "Lebenslauf herunterladen",
+    "hireMeActionBreaked": "Zusammenarbeit\n  vereinbaren!",
+    "downloadCvActionBreaked": "Lebenslauf\n  herunterladen",
     "aboutMeDescription": "Nach Abschluss des Studiums als ",
     "aboutMeDescription_1": "Fachinformatiker Anwendungsentwicklung im Jahr 2018",
     "aboutMeDescription_2": " bin ich immer auf der Suche nach neuen Herausforderungen. Ich bin schnell ",
