--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -13,6 +13,7 @@
     "bottomSubTitle": "Freelance - Flutter Mobile App Developer",
     "poweredByFlutter": "Made with 💙 and Flutter web",
     "motto": "You never lose. You either win or you learn.",
+    "mottoBreaked": "You never lose.\n  You either win or  \n  you learn.",
     "nelsonMandela": "- Nelson Mandela ",
     "aboutMeTitle": "About me",
     "aboutMeShort": "This is me",
@@ -20,6 +21,8 @@
     "experienceYear": "05",
     "hireMeAction": "Arrange cooperation!",
     "downloadCvAction": "Download CV",
+    "hireMeActionBreaked": "Arrange cooperation!",
+    "downloadCvActionBreaked": "Download CV",
     "aboutMeDescription": "After graduating as an ",
     "aboutMeDescription_1": "IT Specialist Application Developer in 2018",
     "aboutMeDescription_2": ", I am always looking for new challenges. I quickly",
