Add tabbar and cleanup

--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -19,21 +19,21 @@
     "aboutMeShort": "Das bin ich",
     "experienceYearTitle": "Jahre der Erfahrung",
     "experienceYear": "05",
-    "hireMeAction": "Zusammenarbeit vereinbaren!",
+    "hireMeAction": "Zusammenarbeit vereinbaren",
     "downloadCvAction": "Lebenslauf herunterladen",
-    "hireMeActionBreaked": "Zusammenarbeit\n  vereinbaren!",
+    "hireMeActionBreaked": "Zusammenarbeit\n  vereinbaren",
     "downloadCvActionBreaked": "Lebenslauf\n  herunterladen",
-    "aboutMeDescription": "Nach Abschluss des Studiums als ",
+    "aboutMeDescription": "Nach dem Abschluss der Ausbildung als ",
     "aboutMeDescription_1": "Fachinformatiker Anwendungsentwicklung im Jahr 2018",
-    "aboutMeDescription_2": " bin ich immer auf der Suche nach neuen Herausforderungen. Ich bin schnell ",
-    "aboutMeDescription_3": "spezialisiert auf mobile App-Entwicklung",
-    "aboutMeDescription_4": " und habe nun mehrere Jahre Erfahrung in der Softwareentwicklung insbesondere mit dem Flutter-Framework.",
-    "experienceYearDescription": "Biete 5 Jahre Erfahrung in der Softwareentwicklung, insbesondere in der mobilen App-Entwicklung",
-    "experienceYearDescription_1": " Ich bin darauf spezialisiert über den Tellerrand zu schauen und einzigartige Lösungen zu finden.",
-    "experienceYearDescription_2": " und schwierigen technischen Problemen effizient zu lösen.",
-    "experienceYearDescription_3": " Ich bringe Erfahrungen aus der Gestaltung der ",
+    "aboutMeDescription_2": " bin ich ständig auf der Suche nach neuen Herausforderungen und Erfahrungen. Schon früh habe ich mich ",
+    "aboutMeDescription_3": "auf die mobile App-Entwicklung spezialisiert.",
+    "aboutMeDescription_4": " Jedes mal aufs neue erfreut es mich an der Speerspitze der Technologie Mobile Apps mit Flutter entwicklen zu dürfen. Ich bin auch überzeugt, dass Flutter das Framework der Zukunft für die Mobile App Entwicklung wird.",
+    "experienceYearDescription": "Ich biete 5 Jahre Erfahrung in der Softwareentwicklung, insbesondere in der mobilen App-Entwicklung mit dem Flutter Framework.",
+    "experienceYearDescription_1": " Ich bin darauf spezialisiert über den Tellerrand zu schauen und einzigartige Lösungen zu finden ",
+    "experienceYearDescription_2": "und schwierigen technischen Problemen effizient zu lösen.",
+    "experienceYearDescription_3": " Ich bringe Erfahrungen in der Gestaltung der ",
     "experienceYearDescription_4": "UI von Apps nach Konzepten",
-    "experienceYearDescription_5": " bis ",
+    "experienceYearDescription_5": " bis hin zur ",
     "experienceYearDescription_6": "Fehler- und Leistungsanalyse",
     "experienceYearDescription_7": " sowie eine komplette App-Optimierung mit.",
     "serviceTitle": "Dienstleistungen",
